runs/jitfailure-ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c/error.log
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp: In member function ‘virtual void ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:110:42: error: no matching function for call to ‘max(double&, int)’
         sv6[0] = sp[3] * std::max(w0, 100);
                                          ^
In file included from /usr/include/c++/5/algorithm:61:0,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.h:26,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:24:
/usr/include/c++/5/bits/stl_algobase.h:219:5: note: candidate: template<class _Tp> const _Tp& std::max(const _Tp&, const _Tp&)
     max(const _Tp& __a, const _Tp& __b)
     ^
/usr/include/c++/5/bits/stl_algobase.h:219:5: note:   template argument deduction/substitution failed:
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:110:42: note:   deduced conflicting types for parameter ‘const _Tp’ (‘double’ and ‘int’)
         sv6[0] = sp[3] * std::max(w0, 100);
                                          ^
In file included from /usr/include/c++/5/algorithm:61:0,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.h:26,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:24:
/usr/include/c++/5/bits/stl_algobase.h:265:5: note: candidate: template<class _Tp, class _Compare> const _Tp& std::max(const _Tp&, const _Tp&, _Compare)
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
/usr/include/c++/5/bits/stl_algobase.h:265:5: note:   template argument deduction/substitution failed:
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:110:42: note:   deduced conflicting types for parameter ‘const _Tp’ (‘double’ and ‘int’)
         sv6[0] = sp[3] * std::max(w0, 100);
                                          ^
In file included from /usr/include/c++/5/algorithm:62:0,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.h:26,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:24:
/usr/include/c++/5/bits/stl_algo.h:3457:5: note: candidate: template<class _Tp> _Tp std::max(std::initializer_list<_Tp>)
     max(initializer_list<_Tp> __l)
     ^
/usr/include/c++/5/bits/stl_algo.h:3457:5: note:   template argument deduction/substitution failed:
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:110:42: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘double’
         sv6[0] = sp[3] * std::max(w0, 100);
                                          ^
In file included from /usr/include/c++/5/algorithm:62:0,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.h:26,
                 from /tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:24:
/usr/include/c++/5/bits/stl_algo.h:3463:5: note: candidate: template<class _Tp, class _Compare> _Tp std::max(std::initializer_list<_Tp>, _Compare)
     max(initializer_list<_Tp> __l, _Compare __comp)
     ^
/usr/include/c++/5/bits/stl_algo.h:3463:5: note:   template argument deduction/substitution failed:
/tmp/tmphTVILD/ffc_form_67f24ad8b1e2fcbcf6d71ba2ca125a41d7b0857c.cpp:110:42: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘double’
         sv6[0] = sp[3] * std::max(w0, 100);
                                          ^
